--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<script>
         document.addEventListener("DOMContentLoaded", function() {
-            // 检查用户是否已登录（二次修改）
+            // 检查用户是否已登录（二次修改）(B3中修改)
             var isLoggedIn = localStorage.getItem("isLoggedIn");
             // 如果未登录，则重定向到登录页面
             if (!isLoggedIn) {
